--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initiale-scale=1.5">
     <title> Document</title>
-</head>
+    <link rel="stylesheet" href="styles.css" </head>
 
-<body>
-    <h1>
-        Developer: Sergii Mytakii
-    </h1>
-    <p>
-        Contacts: Email: serjmitaki@jmail.com
-    </p>
-</body>
+    <body>
+        <h1>
+            Developer: Sergii Mytakii
+        </h1>
+        <h4>
+            Contacts:
+        </h4>
+        <p>
+            Email: serjmitaki@jmail.com
+        </p>
+    </body>
 
 </html>
