--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initiale-scale=1.5">
     <title> Document</title>
-    <link rel="stylesheet" href="styles.css" </head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <body>
-        <h1>
-            Developer: Sergii Mytakii
-        </h1>
-        <h4>
-            Contacts:
-        </h4>
-        <p>
-            Email: serjmitaki@jmail.com
-        </p>
-    </body>
+<body>
+    <h1>
+        Developer: Sergii Mytakii
+    </h1>
+    <h4>
+        Contacts:
+    </h4>
+    <p>
+        Email:
+        <link> serjmitaki@gmail.com
+        </link>
+    </p>
+    <p>
+        Facebook:
+        <link> https://www.facebook.com/profile.php?id=100000210945047
+        </link>
+    </p>
+
+</body>
 
 </html>
