--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     </h4>
     <p>
         Email:
-        <link> serjmitaki@gmail.com
-        </link>
+        <a href="mailto:serjmitaki@gmail.com">serjmitaki@gmail.com
+
+        </a>
+
     </p>
     <p>
         Facebook:
-        <link> https://www.facebook.com/profile.php?id=100000210945047
-        </link>
+        <a href="https://www.facebook.com/profile.php?id=100000210945047"> https://www.facebook.com/profile.php?id=100000210945047
+        </a>
     </p>
 
 </body>
