--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,6 +27,8 @@
         <a href="https://www.facebook.com/profile.php?id=100000210945047"> https://www.facebook.com/profile.php?id=100000210945047
         </a>
     </p>
+
+    <img src="pictures/logo_icoc_drawer.png">
 
 </body>
 
