--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </a>
     </p>
 
-    <img src="pictures/logo_icoc_drawer.png">
+    <img src="/pictures/logo_icoc_drawer.png" height="100">
 
 </body>
 
