--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initiale-scale=1.5">
-    <title> Document</title>
+    <title> Support page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -28,7 +28,7 @@
         </a>
     </p>
 
-    <img src="/pictures/logo_icoc_drawer.png" height="100">
+    <img src="/pictures/logo_icoc_drawer.png" height="150" style="background-color: white;">
 
 </body>
 
