--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </a>
     </p>
 
-    <img src="/pictures/logo_icoc_drawer.png" height="150" style="background-color: white;">
+    <img src="/pictures/logo_icoc_drawer.png" height="151" width="346" style="background-color: white;">
 
 </body>
 
