--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         Developer: Sergii Mytakii
     </h1>
     <h4>
-        Contacts:
+        Thanks for using ICOC app!
+        <br> If you have any troubles with it - do nat hesitate to contact me!
     </h4>
     <p>
         Email:
