--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <h4>
         Thanks for using ICOC app!
-        <br> If you have any troubles with it - do nat hesitate to contact me!
+        <br> If you have any troubles or suggestions - do nat hesitate to contact me!
     </h4>
     <p>
         Email:
