--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h4>
         Thanks for using ICOC app!
         <br>
-        <br> If you have any troubles or suggestions - do nat hesitate to contact me!
+        <br> If you have any troubles or suggestions - do not hesitate to contact me!
     </h4>
     <p>
         Email:
